# substrate-place

./: README.md
place/: Cargo.toml  README.md
place/runtime/src/: lib.rs  place.rs
place/runtime/wasm/src/: lib.rs
place/src/: chain_spec.rs  service.rs
runtime/: Cargo.toml
runtime/src/: place.rs
runtime/wasm/: Cargo.toml  build.sh
src/: main.rs
substratekitties-ui/: server.js  webpack.config.js
substratekitties-ui/src/: app.jsx
substratekitties-ui/src/KittyCards/: index.jsx
substratekitties/runtime/src/: lib.rs  place.rs  substratekitties.rs
substratekitties/src/: chain_spec.rs  main.rs
